Re-writing mistaken markdown

--- a/notebooks/Exploratory-Notebook.ipynb
+++ b/notebooks/Exploratory-Notebook.ipynb
@@ -2,46 +2,33 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f4044c5d-91ab-4476-9eac-194b776b7ff4",
+   "id": "1f40db02-4e65-451a-8778-6fa6df34e34e",
    "metadata": {},
    "source": [
-    "### Exploratory Download and Preprocessing of IMERG Monthly Precipitation Data\n",
+    "### Exploratory Download and Comparision of IMERG with GPCP\n",
     "\n",
-    "In this notebook, we download and preprocess the **IMERG Monthly Final Run (Version 07)** precipitation dataset.\n",
-    "The goal is to obtain a clean, analysis-ready monthly IMERG dataset for the period **2019–2025**, which will later\n",
+    "This notebook documents the exploratory phase of the ESDP final project.\n",
+    "\n",
+    "The objective is to understand the structure, resolution, and conventions\n",
+    "of two monthly precipitation datasets:\n",
+    "- IMERG Final Run (monthly)\n",
+    "- GPCP monthly mean precipitation\n",
+    "\n",
+    "Only inspection and exploration are performed here.\n",
+    "No regridding or final processing is applied in this notebook.\n",
+    "\n",
+    "We download **IMERG Monthly Final Run (Version 07)** precipitation dataset for the **2019–2022**, which will later\n",
     "be compared against the GPCP monthly precipitation product.\n",
-    "\n",
-    "This notebook focuses only on:\n",
-    "- downloading IMERG monthly files\n",
-    "- opening and concatenating them\n",
-    "- performing basic sanity checks\n",
-    "- saving a single processed NetCDF file\n",
     "\n",
     "### Datasets Overview\n",
     "\n",
     "#### IMERG (Integrated Multi-satellitE Retrievals for GPM)\n",
     "- Monthly Final Run product\n",
     "- Native resolution: ~0.1°\n",
-    "- Units: precipitation rate (mm/hr)\n",
-    "- Longitude convention: -180 to 180\n",
-    "- Strength: fine spatial detail\n",
     "\n",
     "### GPCP (Global Precipitation Climatology Project)\n",
     "- Monthly precipitation product\n",
-    "- Native resolution: 2.5°\n",
-    "- Units: precipitation rate (mm/day)\n",
-    "- Longitude convention: 0 to 360\n",
-    "- Strength: long-term climatological consistency\n",
-    "\n",
-    "Given these differences, IMERG must be:\n",
-    "- temporally subset\n",
-    "- spatially subset\n",
-    "- unit-converted\n",
-    "- regridded to the GPCP grid\n",
-    "\n",
-    "\n",
-    "The monthly product is used to ensure consistency with the GPCP monthly dataset,\n",
-    "which is designed for climatological analysis.\n"
+    "- Native resolution: 2.5°"
    ]
   },
   {
@@ -1552,9 +1539,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7c912d4b-5f75-4b36-9d1b-d9dddb88311c",
+   "metadata": {},
+   "source": [
+    "### Planned Processing Strategy\n",
+    "\n",
+    "Based on this exploratory analysis, the final workflow will:\n",
+    "\n",
+    "- use a configuration file to define:\n",
+    "  - latitude and longitude bounds for Northern India\n",
+    "  - time range (2019–2021)\n",
+    "\n",
+    "- concatenate IMERG monthly files in a processing script\n",
+    "- subset IMERG and GPCP spatially and temporally\n",
+    "- convert precipitation units where necessary\n",
+    "- regrid IMERG to the GPCP grid using xarray interpolation\n",
+    "\n",
+    "This exploratory notebook provides the basis for implementing\n",
+    "a clean, script-based processing pipeline."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d33dddad-44cb-4b14-93f6-77e0e8bf119e",
+   "id": "122bcaac-7811-43ef-8a96-ff05746ea68f",
    "metadata": {},
    "outputs": [],
    "source": []
